<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ strings.xml
  ~
  ~ Copyright (C) 2013 Yuuki Shimizu.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>

    <string name="app_name" translatable="false">Business Map</string>
    <string name="provider" translatable="false">Yuuki Shimizu</string>
    <string name="action_list" translatable="false">List</string>
    <string name="action_about" translatable="false">About</string>
    <string name="label_licenses" translatable="false"><u>Open source licenses</u></string>
    <string name="action_contacts_detail" translatable="false">Show contacts</string>
    <string name="action_directions" translatable="false">Directions</string>
    <string name="action_drive_navigation" translatable="false">Drive navigation</string>
    <string name="label_app_name" translatable="false">Application Name</string>
    <string name="label_provider" translatable="false">Provider</string>
    <string name="label_version" translatable="false">Version</string>
    <string name="title_geocoding" translatable="false">Please wait a moment</string>
    <string name="message_geocoding" translatable="false">finding coordinates from the address registered newly &#8230;</string>
    <string name="message_no_data" translatable="false">No data.</string>
    <string name="message_no_contacts" translatable="false">No contacts in this group.</string>
    <string name="hint_searchview" translatable="false">Find contacts</string>
    <string name="group_all_contacts" translatable="false">All contacts</string>
    <string name="desc_appicon" translatable="false">icon</string>
    <string name="beta__action_update_app" translatable="false">Update app</string>
    <string name="beta__message_downloading" translatable="false">Now downloading the APK file</string>
    <string name="beta__message_updated" translatable="false">Update completed.</string>
    <string name="beta__apk_url" translatable="false">https://dl.dropboxusercontent.com/u/33642842/BusinessMap.apk</string>

</resources>
